Create, update, delete assets user
